bugfix: code dark mode

--- a/static/css/code.css
+++ b/static/css/code.css
@@ -3,6 +3,13 @@ code {
     padding: 0.2% 0.5% 0.2% 0.5% ;
     border-radius: 5px;
 }
+@media all and (prefers-color-scheme: dark) {
+    code {
+        background-color: #6e6e6e;
+        padding: 0.2% 0.5% 0.2% 0.5% ;
+        border-radius: 5px;
+    }
+}
 .hljs{
     background: #f6f8fa;
 }
